--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\DinoMovement.cs" />
     <Compile Include="Assets\Scripts\Ground.cs" />
+    <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\ObjectSpawner.cs" />
     <Compile Include="Assets\Scripts\SkyScrolling.cs" />
     <Compile Include="Assets\Scripts\bulletScript.cs" />
